--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -629,10 +629,6 @@ video {
   left: 1rem;
 }
 
-.left-7 {
-  left: 1.75rem;
-}
-
 .right-0 {
   right: 0px;
 }
@@ -669,6 +665,10 @@ video {
   top: 1rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -679,6 +679,10 @@ video {
 
 .z-40 {
   z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .col-span-1 {
@@ -712,12 +716,12 @@ video {
   margin-top: -0.5rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-2 {
@@ -740,10 +744,6 @@ video {
   margin-bottom: 2rem;
 }
 
-.ml-0\.5 {
-  margin-left: 0.125rem;
-}
-
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -754,10 +754,6 @@ video {
 
 .ml-2 {
   margin-left: 0.5rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
 }
 
 .ml-6 {
@@ -832,8 +828,8 @@ video {
   margin-top: 2rem;
 }
 
-.mt-auto {
-  margin-top: auto;
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
 .line-clamp-2 {
@@ -947,10 +943,6 @@ video {
   height: 320px;
 }
 
-.h-\[60px\] {
-  height: 60px;
-}
-
 .h-auto {
   height: auto;
 }
@@ -963,8 +955,8 @@ video {
   height: 100vh;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.h-\[200px\] {
+  height: 200px;
 }
 
 .w-1\/3 {
@@ -1046,6 +1038,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[220px\] {
+  width: 220px;
 }
 
 .min-w-0 {
@@ -1130,10 +1126,6 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -1148,10 +1140,6 @@ video {
 
 .items-start {
   align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -1180,10 +1168,6 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
-}
-
-.gap-20 {
-  gap: 5rem;
 }
 
 .gap-3 {
@@ -1297,10 +1281,6 @@ video {
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.whitespace-nowrap {
   white-space: nowrap;
 }
 
@@ -1428,11 +1408,6 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
-}
-
 .border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity, 1));
@@ -1472,19 +1447,9 @@ video {
   background-color: rgb(0 113 133 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#131921\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 25 33 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#232f3e\] {
   --tw-bg-opacity: 1;
   background-color: rgb(35 47 62 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#37475a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 71 90 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#C45500\] {
@@ -1500,11 +1465,6 @@ video {
 .bg-\[\#F8FAFC\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#febd69\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 189 105 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#ffd814\] {
@@ -1645,6 +1605,10 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1));
 }
 
+.bg-black\/50 {
+  background-color: rgb(0 0 0 / 0.5);
+}
+
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
@@ -1705,6 +1669,10 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-2 {
@@ -1801,6 +1769,10 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1811,6 +1783,10 @@ video {
 
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pl-0 {
@@ -1920,10 +1896,6 @@ video {
   text-transform: uppercase;
 }
 
-.leading-none {
-  line-height: 1;
-}
-
 .leading-relaxed {
   line-height: 1.625;
 }
@@ -1932,8 +1904,8 @@ video {
   line-height: 1.375;
 }
 
-.tracking-tighter {
-  letter-spacing: -0.05em;
+.leading-none {
+  line-height: 1;
 }
 
 .tracking-wider {
@@ -1988,11 +1960,6 @@ video {
 .text-blue-700 {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-300 {
@@ -2123,16 +2090,6 @@ video {
   color: rgb(156 163 175 / var(--tw-placeholder-opacity, 1));
 }
 
-.placeholder-gray-500::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity, 1));
-}
-
-.placeholder-gray-500::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-placeholder-opacity, 1));
-}
-
 .opacity-60 {
   opacity: 0.6;
 }
@@ -2204,6 +2161,10 @@ video {
   transition-duration: 300ms;
 }
 
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .bg-brand-gray {
   background-color: #f5f5f5;
 }
@@ -2214,17 +2175,6 @@ video {
 
 .font-display {
   font-family: Oswald, sans-serif;
-}
-
-.focus-within\:ring-2:focus-within {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus-within\:ring-\[\#ff9900\]:focus-within {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 153 0 / var(--tw-ring-opacity, 1));
 }
 
 .hover\:border-gray-600:hover {
@@ -2247,16 +2197,6 @@ video {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-\[\#485769\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 87 105 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-\[\#f3a847\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 168 71 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-\[\#f7ca00\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(247 202 0 / var(--tw-bg-opacity, 1));
@@ -2265,11 +2205,6 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-50:hover {
@@ -2357,18 +2292,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:outline:hover {
-  outline-style: solid;
-}
-
-.hover\:outline-1:hover {
-  outline-width: 1px;
-}
-
-.hover\:outline-white:hover {
-  outline-color: #fff;
-}
-
 .hover\:ring-2:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2418,6 +2341,18 @@ video {
     margin-bottom: 0.5rem;
   }
 
+  .sm\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .sm\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
+  .sm\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -2438,6 +2373,10 @@ video {
     height: 6rem;
   }
 
+  .sm\:h-\[180px\] {
+    height: 180px;
+  }
+
   .sm\:w-24 {
     width: 6rem;
   }
@@ -2448,6 +2387,10 @@ video {
 
   .sm\:w-auto {
     width: auto;
+  }
+
+  .sm\:w-\[180px\] {
+    width: 180px;
   }
 
   .sm\:grid-cols-2 {
@@ -2494,6 +2437,10 @@ video {
 
   .sm\:p-6 {
     padding: 1.5rem;
+  }
+
+  .sm\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .sm\:text-right {
@@ -2668,6 +2615,18 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:static {
+    position: static;
+  }
+
+  .lg\:z-50 {
+    z-index: 50;
+  }
+
+  .lg\:z-0 {
+    z-index: 0;
+  }
+
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2684,8 +2643,41 @@ video {
     margin-left: 1rem;
   }
 
+  .lg\:mr-10 {
+    margin-right: 2.5rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-\[220px\] {
+    height: 220px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
+  }
+
   .lg\:w-auto {
     width: auto;
+  }
+
+  .lg\:w-\[280px\] {
+    width: 280px;
+  }
+
+  .lg\:w-\[220px\] {
+    width: 220px;
+  }
+
+  .lg\:translate-x-0 {
+    --tw-translate-x: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:grid-cols-12 {
@@ -2702,6 +2694,10 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:pl-0 {
+    padding-left: 0px;
   }
 
   .lg\:text-2xl {
